# audiograb

./: .gitignore  README.md  SETUP.md  main.py  notes.md  pyproject.toml  setup.md  wake.c  wakectl.c
audiograbd/: main.py
audiograbd/utils/: config.py  device.py  gpio.py  logger.py  transcode.py  wakealarm.py
pinctl/: Makefile  config.h  debug.h  main.c  pin_func.c  pin_func.h  pinread  utils.c  utils.h
scripts/: birdnet-analyse.sh
src/: log.py  main.py  requirements.txt  utils.py  wakectl.c
src/audiograbd/: main.py  main_test.py  requirements.txt  wakealarm.sh
src/audiograbd/config/: example.json
src/audiograbd/models/: birdnet.py  silero.py  speech.py
src/audiograbd/utils/: birdnet.py  config.py  device.py  gpio.py  logger.py  modem.py  server.py  storage.py  transcode.py  wakealarm.py
src/config/: am.conf  cm.conf  example.json
src/drivers/: modem.py
src/models/: bird.py
src/pinctl/: Makefile  main.c  pin_func.c  pin_func.h  pinread
src/utils/: bat.py  config.py  conversion.py  device.py  devices.py  other.py  rtc.py  storage.py  transcode.py  wakealarm.py
utils/: config.py  server.py  silero.py
