[project]
name = "audiograbd"
version = "1.0"
description = "Daemon for the Audiograb System. Collect, process, and transmit audio from wildlife recorders"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-storage>=3.10.1",
    "gpiozero>=2.0.1",
    "requests>=2.34.0",
    "silero-vad>=6.2.1",
    "torchaudio<2.9",
    "torchcodec>=0.11.1",
]
